Adding presentation notes from class today
However, the notes may not be correct because of the markdown formatting.

--- a/1.3.3_notes.md
+++ b/1.3.3_notes.md
@@ -1,11 +1,74 @@
 Presentation:
-  Log into 
+  Log into github
+  Search for jkimrusd/
+  Look for Python-gravity
+  First you must forkit to your repository
+  Launch github-desktop
+  Log into github
+  Clone the repository to the computer
+  Open it using Canopy : Documents/github 
+  Make changes
+  Commit
+  Push
 
+What changes to make
+There are several 16.  Each of them mean something different.
+We are going to change this program from ft/s to m/s.
+The equation (in ft/sec) is
+h=-32/2*t*t+v*t+h
+In (m/s) is
+h=-9.8/2*t*t+v*t+h
+Also change all the words into meters
+
+Variables
+Variables store things
+x=5 in Python means take the value of 5 and store it into a variable called x
+y=”hello world” in Python means take the words “hello world” and store it into a variable called y
+Variables can hold : integers, floats, strings, and booleans
+Please start variables with lower case and use Camel case letters (flightDuration)
+Constants=Fixed values=magic numbers : Use all caps
+Booleans (true or false) start with “is” (isWinning=True)
+Use single letters for variables you will not use long term.
+
+Operators
++  -  *  /
+x=y+56
+z=x+y
+z=x**3
+Usual rules of math (PEMDAS) apply
+
+Unuary Operators
+x=x+5    means add 5 to x.  Also known as increment x by 5
+You can instead replace it with 
+x+=5
+
+x=x+6 can also be x+=6
+y=y*12 can be y*=12
+z=z/h can also be z/=h
+t=t-x can also be t-=x
+
+For counting numbers, we frequently add 1 or subtract one.  There is an even bigger shortcut
+for x=x+1 you can use x+=1 or x==
+for x=x-1 you can use x-=1 or x--
+
+Function return values
+def function():
+    return 5
+Returns the value 5.
+def function():
+	return “hello world”
+Returns the phrase “hello world”
+
+Function Parameters
+To pass parameters to function, you use parameters
+def function(variables):
+     return variables
+     
 Oh well, the internet is not good. Moving on!
 
-Let's try it!
+Let's try repl.it
 
-3rd plan then the internet is so gamefreaked slow
+The internet is so slow. Moving on to Plan C.
 
 Open Canopy. You're kidding me. It's taking forever to...oh it loaded.
 Bring up the Editor.
