--- a/1.3.3_notes.md
+++ b/1.3.3_notes.md
@@ -1,15 +1,15 @@
 Presentation:
-  Log into github
-  Search for jkimrusd/
-  Look for Python-gravity
-  First you must forkit to your repository
-  Launch github-desktop
-  Log into github
-  Clone the repository to the computer
-  Open it using Canopy : Documents/github 
-  Make changes
-  Commit
-  Push
+Log into github
+Search for jkimrusd/
+Look for Python-gravity
+First you must forkit to your repository
+Launch github-desktop
+Log into github
+Clone the repository to the computer
+Open it using Canopy : Documents/github 
+Make changes
+Commit
+Push
 
 What changes to make
 There are several 16.  Each of them mean something different.
@@ -182,6 +182,10 @@ and get 25
 use int(raw-input(...
 
 Here are some basic math operation shortcuts.
+
+When you input 3, it comes in as "3" (in quotaiton marks). This is not a number. You must convert it to a number for it to work in functions.
+
+WHen you're writing code, you will have a huge section of code and you have absolutely no idea of what the code is doing. You need to run throguh this code step by step. It's like creating a knot and then trying to unravel it.
 
 a = 5
 
