Notes until 2018/10/16 9:03am

--- a/1.3.3_notes.md
+++ b/1.3.3_notes.md
@@ -183,10 +183,6 @@ use int(raw-input(...
 
 Here are some basic math operation shortcuts.
 
-When you input 3, it comes in as "3" (in quotaiton marks). This is not a number. You must convert it to a number for it to work in functions.
-
-WHen you're writing code, you will have a huge section of code and you have absolutely no idea of what the code is doing. You need to run throguh this code step by step. It's like creating a knot and then trying to unravel it.
-
 a = 5
 
 a+=5
@@ -198,4 +194,9 @@ This multiplies a by 5.
 print a --> 15
 
 you may shut down your computers now.
-we will talk about function return values.
+we will talk about function return values tomorrow.
+
+
+When you input 3, it comes in as "3" (in quotaiton marks). This is not a number. You must convert it to a number for it to work in functions.
+
+WHen you're writing code, you will have a huge section of code and you have absolutely no idea of what the code is doing. You need to run throguh this code step by step. It's like creating a knot and then trying to unravel it.
