--- a/1.3.3_notes.md
+++ b/1.3.3_notes.md
@@ -1,4 +1,4 @@
-Presentation:
+# 1.3.3 Presentation
 Log into github
 Search for jkimrusd/
 Look for Python-gravity
@@ -11,7 +11,7 @@ Make changes
 Commit
 Push
 
-What changes to make
+## What changes to make
 There are several 16.  Each of them mean something different.
 We are going to change this program from ft/s to m/s.
 The equation (in ft/sec) is
@@ -20,7 +20,7 @@ In (m/s) is
 h=-9.8/2*t*t+v*t+h
 Also change all the words into meters
 
-Variables
+## Variables
 Variables store things
 x=5 in Python means take the value of 5 and store it into a variable called x
 y=”hello world” in Python means take the words “hello world” and store it into a variable called y
@@ -30,14 +30,14 @@ Constants=Fixed values=magic numbers : Use all caps
 Booleans (true or false) start with “is” (isWinning=True)
 Use single letters for variables you will not use long term.
 
-Operators
+## Operators
 +  -  *  /
 x=y+56
 z=x+y
 z=x**3
 Usual rules of math (PEMDAS) apply
 
-Unuary Operators
+## Unuary Operators
 x=x+5    means add 5 to x.  Also known as increment x by 5
 You can instead replace it with 
 x+=5
@@ -51,7 +51,7 @@ For counting numbers, we frequently add 1 or subtract one.  There is an even big
 for x=x+1 you can use x+=1 or x==
 for x=x-1 you can use x-=1 or x--
 
-Function return values
+## Function return values
 def function():
     return 5
 Returns the value 5.
@@ -59,11 +59,146 @@ def function():
 	return “hello world”
 Returns the phrase “hello world”
 
-Function Parameters
+## Function Parameters
 To pass parameters to function, you use parameters
 def function(variables):
      return variables
-     
+
+# 1.3.3 Branching and Output
+
+## 4,6 Multiple Assignment
+
+The = takes the right hand side and puts it into the left hand side
+	x=15
+	y=-3.25
+Python allows multiple assignments
+	x,y=(3,-1.5)
+X is now 3 and y is now -1.5
+
+## 3 Conditionals
+
+Testing or conditions: You use the following to test
+
+a == b : equal to
+a != b : not equal to
+a < b : less than
+a <= b : less than or equal to
+a > b : greater than
+a >= b : greater than or equal to
+
+The result is a boolean ( either True or False )
+
+## Data types and comparison
+
+```
+a=”hello”
+b=”world”
+a<b
+```
+
+returns False
+a<b means “does a come before b in the dictionary”
+
+
+FLOATS:
+NEVER test floats for equality.
+a=0.5
+b=0.5
+Never test for == or !=
+the reason is because the precision of floats returns an infinite binary number and there is a small margin of error
+
+```
+a=0.1+0.2
+b=0.15+0.15
+print a-b
+```
+
+a-b should be 0, but the computer returns
+```
+5.55111512313e-17
+```
+
+only >= and <= are used for comparing floats
+
+## 3 Compound conditionals s	and and or
+
+You can combine several tests:  For and to be true, both must be true.  For or to be true, only one can be true.
+
+(3<5) and (5<4) is False
+(3<5) or (5<4) is True
+(3<5) and (5>4) is True
+(3>5) or (5<4) is False
+
+## 3 Truth tables: a formal presentation
+
+And
+
+A|B|A and B
+T|T|T
+T|F|F
+F|T|F
+F|F|F
+
+Or
+
+A|B|A or B
+T|T|T
+T|F|T
+F|T|T
+F|F|F
+
+## 6 Conditional Statements
+
+```
+if (True):
+    Do something 1
+    Do something 2
+else:
+  	 Do different thing 1
+    Do different thing 2
+```
+
+Replace True with a test.
+
+```
+if (x<5 and x>-2):
+	print(“Nice X”)
+	print (“ Find a y”)
+Else:
+	print(“Too bad”)
+	Print (“So sad”)
+```
+
+## 7-9 Collections (why is this here?)
+
+Variables generally contain one item.  You can create a variable that contains a collection of items.
+a=[“monkey”,”dog”,”cat”]
+Then you can use in to see if an item is in that collection
+“monkey” in a
+“donkey” in a
+
+## 7-9 Collections (b)
+
+```
+if (“monkey” in a):
+    print (“ Your mingkey needs a license”)
+else:
+   print(“ Do you take me for a fuel?”)
+(ref https://www.youtube.com/watch?v=WnlIWpZSPXU) 
+```
+
+## Exercise 1
+
+```
+x=int(input("Type in a number"))
+
+if ((x<5 and (x>-2)):
+	print("Nice X")
+	print("y did you break up?")
+else:
+	print("No good")
+```
+
 Oh well, the internet is not good. Moving on!
 
 Let's try repl.it
