Updating table again

--- a/1.3.3_notes.md
+++ b/1.3.3_notes.md
@@ -133,20 +133,21 @@ You can combine several tests:  For and to be true, both must be true.  For or t
 
 And
 
----|---|---
-A|B|A and B
-T|T|T
-T|F|F
-F|T|F
-F|F|F
+|A|B|A and B|
+|---|---|---|
+|T|T|T|
+|T|F|F|
+|F|T|F|
+|F|F|F|
 
 Or
 
-A|B|A or B
-T|T|T
-T|F|T
-F|T|T
-F|F|F
+|A|B|A or B|
+|---|---|---|
+|T|T|T|
+|T|F|T|
+|F|T|T|
+|F|F|F|
 
 ## 6 Conditional Statements
 
