--- a/1.3.7_notes.md
+++ b/1.3.7_notes.md
@@ -53,7 +53,7 @@ range(3,10,2) - integers from 3 to 9 count by 2 - 3,5,7,9
 Use numbered loops with lists
 
 ```
-rhapsody=[‘Hungarian’, ’Bohemian’, ‘in Blue’]
+rhapsody=['Hungarian', 'Bohemian', 'in Blue']
 for song in rhapsody:
     print song
 
