Discussion effective October 31, 2018
In this discussion, we explain the answers to the PLTW problems, even though I learned the code like second nature human work.

--- a/1.3.6_notes.md
+++ b/1.3.6_notes.md
@@ -58,3 +58,67 @@ Dictionary - imput anything, keyed index, mutable, s={‘a’:14,’b’:15}
 7. Changing an element:  s[‘Jeans’]=’GAP’
 8. Adding an element at the end: s[‘Jacket’]=’Spaghetti Factory’
 9. Inserting an element at location 2: CANNOT.  IT IS MEANINGLESS
+
+## Discussion
+
+## Section #8
+
+```
+a=10
+b=(9,a,11)
+a=15
+```
+What is b? b=(9.10,11)  does not get updated
+
+```
+b=(9,a,11)
+```
+What is b now?   b=(9,15,11) if you type in b again, it will use new a.
+
+Did you see? They made a typo with the code.
+
+## Section #10
+
+What is the difference between
+```
+values[2]=3  (integer, you can do math)
+```
+And
+```
+values[2]=’3’   (string, you cannot do math)
+```
+
+## Section #13
+
+```
+value=[3,4,5]
+```
+The following are equivalent and will return value=[3,4,5,6,7]
+```
+value = value + [6,7]
+value += [6,7]
+```
+The following are equivalent and will return value=[3,4,5,[6,7]]
+```
+value.append([6,7])
+value+=[[6,7]]
+```
+
+## Section #15
+
+```
+def roll_two_dice():
+    die1 = random.choice([1, 2, 3, 4, 5, 6])
+    die2 = random.randint(1, 6)
+    return die1 + die2
+def roll_two_dice_wrong():
+    die=random.choice(2,3,4,5,6,7,8,9,10,1,12);
+    Return die;
+```
+
+## Section #16
+
+```
+def guess_letter():
+     return random.choice('qwertyuioplkjhgfdsazxcvbnm')
+```
