Add answers to 1.3.8
Still in lockdown drill

--- a/1.3.8_notes.md
+++ b/1.3.8_notes.md
@@ -162,3 +162,52 @@ https://www.youtube.com/watch?v=kPRA0W1kECg&t=152s
 
 Algorithms Search
 https://www.youtube.com/watch?v=p7k9ncsB5Cs
+
+# Answers
+
+## number 5
+
+```
+x1  def validate():
+x2      guess = '1' # initialization with a bad guess
+x3      answer = 'hangman word'
+x4      while guess not in answer:
+x5          guess = raw_input('Name a letter in \''+answer+'\': ')
+x6      print('Thank you!')
+```
+
+Why is x2 necessary?
+You need to initialize in a while loop.  We are using it in line x4
+
+## number 7
+
+It is often useful to consider how many times a while loop will execute. If guess_game(options) is called with a list of 100 options, how many times might the user have to guess?
+
+100 times in the worst case scenario.  This is called a linear search
+
+## number 9
+
+If you change between 1 and 20from the previous program to between 1 and 6000, how many guesses will you need to guarantee that you have the right answer? Explain.
+
+guess_winnder() is an example of a linear search.  If there are 6000 items, it may take 6000 guesses.
+goguess() is an example of a binary search.  
+If there are N items, it will take
+
+2^x = n, x = log2(n)
+
+If you have 6000 items, it will take 13 tries. 
+
+## number 11
+
+a. How long will it take to guess a birthday?
+b. Why do you need to sort the list for a binary search?
+
+a. 365 days in a year
+
+2^8 = 256
+
+2^9 = 512
+
+9 guesses max
+
+You need to know if a number is higher or lower.
