--- a/1.8_vocabulary_codeorg.md
+++ b/1.8_vocabulary_codeorg.md
@@ -15,3 +15,11 @@ We should learn how the internet works so that
 
 1. We can make informed choices on whether to support or oppose regulations that governments make.
 2. We can make informed choices when making decisions that impact our privacy. 
+
+# Vocab
+
+IP\
+DNS\
+Resolver\
+TLD\
+Cache
