--- a/2.1_Sizes_codeorg.md
+++ b/2.1_Sizes_codeorg.md
@@ -4,9 +4,9 @@
 
 # In the US, things go up by 3 zeros
 
-* 8 bits = 1 Byte\
-* 1000 = KiloByte  (1 Group of 3)\
-* 1,000,000 = MegaByte (2 Groups of 3)\
-* 1,000,000,000 = GigaByte (3 Groups of 3)\
-* 1,000,000,000,000 = TeraByte (4 Groups of 3)\
+* 8 bits = 1 Byte
+* 1000 = KiloByte  (1 Group of 3)
+* 1,000,000 = MegaByte (2 Groups of 3)
+* 1,000,000,000 = GigaByte (3 Groups of 3)
+* 1,000,000,000,000 = TeraByte (4 Groups of 3)
 * 1,000,000,000,000,000 = PetaByte (5 Groups of 3)
