--- a/2.3_notes_codeorg.md
+++ b/2.3_notes_codeorg.md
@@ -12,25 +12,23 @@ The third topic (optional) is not important at all to this course but most inter
 
 Remember
 
-1.Information in the internet transfers as a series of 1’s and 0’s
-2. Suppose 0=black, 1=white.  If you get 12 number 110100110001 
-
-* How many bits per pixel (for BW you only need 1 BPP so you have a 12 pixel image)
-* What is the dimension of the image? 1x12, 2x6,3x4, 4x3,6x2,12,x?
+1. Information in the internet transfers as a series of 1’s and 0’s
+2. Suppose 0=black, 1=white.  If you get 12 number 110100110001\
+a. How many bits per pixel (for BW you only need 1 BPP so you have a 12 pixel image)\
+b. What is the dimension of the image? 1x12, 2x6,3x4, 4x3,6x2,12,x?
 
 # Important concepts
 
 These are test vocabulary words
 
 1. Pixel : A small rectangular/or square block with a single color that comes together to form an image.
-2. Metadata :  Information about data. 
-
-Data: The images to the left\
-Metadata: \
-Painter: Leonardo da Vinci\
-Size  77 cm × 53 cm\
-Datec 1517\
-Location: Louvre\
+2. Metadata :  Information about data.\
+a. Data: The images to the left\
+b. Metadata: \
+i. Painter: Leonardo da Vinci\
+ii. Size  77 cm × 53 cm\
+iii. Datec 1517\
+iv. Location: Louvre
 
 # 1. Invent an image encoding scheme
 
