A new section added
Ends with what to do. The original section starts with the python/Unix shell commands.

--- a/1.4.2_notes.md
+++ b/1.4.2_notes.md
@@ -1,6 +1,109 @@
-## AP CSP 1.4.2
+# AP CSP 1.4.2
 
-Notes
+Notes\
+Lessons
+
+# A New Section
+
+This new content precedes the main content. It was added on May 2, 2019.
+
+## About Python
+
+* Image processing is NOT part of the core language
+* Many functions not in the core language is provided by external libraries that people (companies, volunteers) create.
+* This is where the import statements come in.
+* The instruction manual to use these functions is called an Application Programming Interface (API)
+
+## Primitives
+
+* Programming languages generally provide primities
+* Primitives are like atoms- they are basic building blocks
+  * Integers - counting numbers without decimals
+  * floats/doubles - decimal numbers
+  * Characters - a letter such as “a”
+  * Booleans - True/False.
+
+## Classes and Objects
+
+* To make complex programs more manageable, you combine many primities into a single structure called Structures
+* Example of using just primities
+  * Math_grade
+  * English_grade
+  * History_grade
+* Example of using structures
+  * Structure GPA
+    * Math_Grade
+    * English_grade
+    * History_GPA
+    
+## Structures and Primities
+
+Primities
+```
+peter_math_grade=93
+peter_english_grade=82
+Joyce_math_grade=86
+Joyce_english_grade=95
+peter_GPA=calculate_GPA(peter_math_grade, Peter_english_grade)
+```
+
+Structures
+```
+Structure Peter_Grade
+	Math
+	English
+
+Peter_Grade.math=90
+Peter_Grade.english=82
+Peter_Grade.GPA=calculate_GPA(Peter_Grade)
+```
+
+## Classes
+
+* Classes are structures but also contain methods. 
+* In the previous examples, to update Peter’s GPA, we had to call an external function.
+* Any time we changed Peter’s grade, we had to remember to call the calculate_GPA function.
+* If we forget to call calculate_GPA, Peter’s GPA is incorrect
+
+```
+Class Grade
+  float  Math_grade
+  float English_grade
+  float GPA
+
+ calculate_GPA()
+
+ updateMath(new_grade)
+     Math_grade=new_grade
+    calculate_GPA()
+
+----------------------------------
+Peter.updateMath(90) : GPA also gets updated
+ 
+```
+
+## matplotlib.pyplot
+
+matplotlib is used to graph data, including images.  The section that we use to plot is called plt for short.
+
+* img=plt.imread(filename) 
+  *Img contains the image data
+* fig,ax=plt.subplots(1,2) 
+  * fig is the canvas.  It contains graphs.  You show it, hide it, redraw it.
+  * ax the actual plot itself.  This is where you stick in your image.
+    * ax.imshow(img)
+
+## What to do
+
+1.  Display the cat
+2. Explore coordinates\
+  a. Whwere is (0,0)\
+  b. What is the size of your image?\
+  c. What coordinate is the cat?
+3. Create a 2x3 and display cat in each
+4. Create a 2x3 and put different characters in each
+
+This is the end of the added section.
 
 ##  Python/Unix shell commands
 
