--- a/1.4.3_notes.md
+++ b/1.4.3_notes.md
@@ -80,3 +80,24 @@ But if you import a package that provides functions, you call the function with 
 ```
 plt.imread()
 ```
+
+# Activity
+
+Things to learn today
+
+1. What do the variables contain?
+2. How do you display images
+3. How do you get the red green blue values of individual pixels?
+4. How do you change the red green blue values of individual pixels?
+5. How do you use conditional changes?
+
+Things to try
+1. Add blocks of color
+2. Change the color of the rings
+3. Move the one of the rings
+4. Change color of Thanos
+5. Move Thanos
+6. Extend
+7. Create a canvas
+8. Add Hulk and Thanos in one image
+9. Use alpha channels to "ghostify"
